syntax = "proto2";
option java_package = "org.webswing.model.app.proto";

import 'CommonProto.proto';

/* =================== SERVER -> APP ====================*/

message ServerToAppFrameMsgInProto {
    optional bytes appFrameMsgIn = 1;
    optional ThreadDumpRequestMsgInProto threadDumpRequest = 2;
    optional ApiEventMsgInProto apiEvent = 3;
    optional ApiCallResultMsgInProto apiCallResult = 4;
    optional commonProto.ConnectionHandshakeMsgInProto handshake = 5;
    repeated commonProto.SimpleEventMsgInProto events = 6;
}

message ThreadDumpRequestMsgInProto {
}

message ApiEventMsgInProto {
	enum ApiEventTypeProto {
		UserConnected = 0;
		UserDisconnected = 1;
		MirrorViewConnected = 2;
		MirrorViewDisconnected = 3;
    }

	optional string userId = 1;
	optional ApiEventTypeProto event = 2;
	optional bytes args = 3;
}

message ApiCallResultMsgInProto {
	optional string correlationId = 1;
	optional string result = 2;
}

/* =================== APP -> SERVER ====================*/

message AppToServerFrameMsgOutProto {
    optional bytes appFrameMsgOut = 1;
    optional ThreadDumpMsgOutProto threadDump = 2;
    optional ExitMsgOutProto exit = 3;
    optional ApiCallMsgOutProto apiCall = 4;
    optional JvmStatsMsgOutProto jvmStats = 5;
    optional AppHandshakeMsgOutProto handshake = 6;
    optional SessionDataMsgOutProto sessionData = 7;
}

message AppHandshakeMsgOutProto {
	optional string secretMessage = 1;
}

message ThreadDumpMsgOutProto {
	optional sint64 timestamp = 1;
	optional string dumpId = 2;
	optional string reason = 3;
}

message ExitMsgOutProto {
	optional sint32 waitForExit = 1;
}

message ApiCallMsgOutProto {
	enum ApiMethodProto {
		HasRole = 0;
		IsPermitted = 1;
	}

	optional string correlationId = 1;
	optional ApiMethodProto method = 2;
	repeated string args = 3;
}

message JvmStatsMsgOutProto {
	optional double heapSize = 1;
	optional double heapSizeUsed = 2;
	optional double cpuUsage = 3;
	optional sint32 edtPingSeconds = 4;
}

message SessionDataMsgOutProto {
	optional bool applet = 1;
	optional bool sessionLoggingEnabled = 2;
	optional bool recording = 3;
	optional string recordingFile = 4;
	optional bool statisticsLoggingEnabled = 5;
}